@@ -2,10 +2,20 @@ use strict;
 use warnings;
 use feature 'say';
 
+use IPC::Shareable;
 use RPi::WiringPi;
 use Test::More;
 
+tie my %shared_pi_info, 'IPC::Shareable', {
+    key => 'rpiw',
+    create => 1
+};
+
 my $pi = RPi::WiringPi->new;
+#use Data::Dumper;
+#print Dumper \%shared_pi_info;
+is exists $shared_pi_info{objects}->{$pi->uuid}, 1, "shared memory has the object's uuid";
+
 my $c = $pi->checksum;
 
 check_checksum($c, 'checksum');
@@ -25,5 +35,15 @@ sub check_checksum {
         $u_count++;
     }
 }
+
+$pi->cleanup;
+
+is
+    exists $shared_pi_info{objects}->{$pi->uuid},
+    '',
+    "shared memory removed the object's uuid after cleanup";
+
+is exists $shared_pi_info{objects}, 1, "objects container in shared memory ok";
+
 done_testing();
 
